[project]
name = "yuan-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.65.0",
    "inquirer>=3.4.1",
    "langchain>=1.2.11",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
exclude = [".venv", "venv", "__pycache__", ".env", ".git"]
